Aug 11, 2013 - v0.3.1  Exposed mantissa, exponent, and guard_bits fields in QCC
    and QCD segments.

Jul 31, 2013 - v0.3.0  Added support for official 2.0.0.

Jul 27, 2013 - v0.2.8  Fixed inconsistency regarding configuration
    file directory on windows (issue91).

Jul 25, 2013 - v0.2.7  Warns but no longer errors out when neither library is
    found (issue89).

Jul 24, 2013 - v0.2.6  No longer warning when configuration file not found.
    Added read support for jpch, jplh boxes.  Added testing of files in
    format-corpus repository.

Jul 23, 2013 - v0.2.5  Fixed inconsistency in XML handling, now all instances
    are always ElementTree objects (issue82).

Jul 21, 2013 - v0.2.4  Fixed markdown bug for Fedora 17 information, fixed
    out-of-date windows information (issue79).  Fixed incorrect
    interpretation of Psot parameter (issue78).

Jul 18, 2013 - v0.2.3  Support for Python 2.6, OpenJPEG 1.4.  Incompatible
    change to ChannelDefinitionBox constructor.  Added RGBA example.

Jul 11, 2013 - v0.2.2  Fixed mistakes with trove classifier, pypi releases.

Jul 11, 2013 - v0.2.0  Support for Python 2.7 on windows, OpenJPEG 1.5.1.

Jun 27, 2013 - v0.1.10  Can wrap codestreams in custom JP2 jackets.  Exposing
    parameter to specify multi component transform.  Added a raw codestream 
    file.

Jun 16, 2013 - v0.1.9  Reading ICC profile headers as ordered dicts.  Exif 
    dictionaries changed to ordered dicts.  Honoring XDG_CONFIG_HOME
    environment variable.

Jun 14, 2013 - v0.1.8  Added reduce=-1 option to get lowest resolution
    thumbnail.

Jun 07, 2013 - v0.1.7  Changed Exif dictionary names from ['Exif', 'Photo',
    'Iop', 'GPSInfo'] to ['Image', 'Photo', 'Iop', 'GPSInfo'].  

Jun 06, 2013 - v0.1.6  Exif classes made private.  Refactored IFD post
    processing.  Corrected omission of Exif in UUIDBox docstring.

Jun 06, 2013 - v0.1.5  Changed ColourSpecificationBox attribute "color_space"