@@ -8,6 +8,8 @@ from .jp2dump import jp2dump
 from . import data
 
 
+# unittest2 only in python-2.6 (pylint/python2.7 issue)
+# pylint: disable=F0401
 def runtests():
     """Discover and run all tests for the glymur package.
     """
